--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="info_delete_message">선택하신 장소가 삭제됩니다.</string>
     <string name="info_use_location_service">위치 서비스를 사용합니다.</string>
     <string name="info_stop_use_location_service">위치 서비스 사용이 중지되었습니다.</string>
-    <string name="info_location_permission_request_message">"위치 서비스를 사용하려면 위치 권한이 필요합니다. 해당 권한을 아래의 방법으로 허용해주세요.\r\n\r\n   앱 권한 → 위치 스위치 ON"</string>
+    <string name="info_location_permission_request_message">"위치 서비스를 사용하려면 위치 권한이 필요합니다. 해당 권한을 아래의 방법으로 허용해주세요.\n\n   앱 권한 → 위치 스위치 ON"</string>
 
     <string name="symbol_colon">:</string>
     <string name="symbol_slash">/</string>
