modify offerTime range(8 → 10), add notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="info_use_location_service">위치 서비스를 사용합니다.</string>
     <string name="info_stop_use_location_service">위치 서비스 사용이 중지되었습니다.</string>
     <string name="info_location_permission_request_message">"위치 서비스를 사용하려면 위치 권한이 필요합니다. 해당 권한을 아래의 방법으로 허용해주세요.\n\n   앱 권한 → 위치 스위치 ON"</string>
+    <string name="info_more_weather_info_message">더 자세한 내용을 보고 싶으시면 클릭해주세요.</string>
 
     <string name="symbol_colon">:</string>
     <string name="symbol_slash">/</string>
@@ -106,6 +107,7 @@
     <string name="mapping_sejong">세종</string>
 
     <string name="holder_level_value">%1$s (%2$d)</string>
+    <string name="holder_weather_notify">%1$s℃ (%3$s℃ / %4$s℃) 체감온도 : %2$s℃</string>
 
     <!-- 메뉴 제목-->
     <string name="favorite_place">즐겨찾는 장소</string>
