--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="mapping_sejong">세종</string>
 
     <string name="holder_level_value">%1$s (%2$d)</string>
-    <string name="holder_weather_notify">%6$s 날씨 %1$s℃ (%4$s℃ / %5$s℃) 체감온도 : %2$s℃</string>
+    <string name="holder_weather_notify">%1$s℃ (%4$s℃ / %5$s℃) 체감온도 : %2$s℃</string>
     <string name="holder_special_value">$s 발효중</string>
     <string name="holder_update_time">업데이트 : %1$s</string>
     <string name="holder_sensory_tpr">(체감 : %1$s℃)</string>
