--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">날씨정보</string>
+    <string name="widget_default_name">오늘날씨</string>
+    <string name="widget_simple_name">간단날씨</string>
 
     <string name="info_progress">데이터 로딩중…</string>
     <string name="info_location_timeout">위치 정보를 가져오는데 실패했습니다.(시간초과) 잠시 후 다시 진행합니다.</string>
@@ -11,6 +13,7 @@
     <string name="info_location_permission_request_message">"위치 서비스를 사용하려면 위치 권한이 필요합니다. 해당 권한을 아래의 방법으로 허용해주세요.\n\n   앱 권한 → 위치 스위치 ON"</string>
     <string name="info_more_weather_info_message">더 자세한 내용을 보고 싶으시면 클릭해주세요.</string>
     <string name="info_favorite_place_is_empty">등록된 장소가 없습니다.\n우측 상단 버튼을 클릭하여 추가해주세요.</string>
+    <string name="info_make_widget_only_one">위젯은 하나만 사용 가능합니다.</string>
 
     <string name="symbol_colon">:</string>
     <string name="symbol_slash">/</string>
