--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="info_more_weather_info_message">더 자세한 내용을 보고 싶으시면 클릭해주세요.</string>
     <string name="info_favorite_place_is_empty">등록된 장소가 없습니다.\n우측 상단 버튼을 클릭하여 추가해주세요.</string>
     <string name="info_make_widget_only_one">위젯은 하나만 사용 가능합니다.</string>
+    <string name="info_add_place_maximum">즐겨 찾는 장소는 최대 5개까지 등록이 가능합니다.</string>
+    <string name="info_add_place_already">해당 장소는 이미 추가되어 있습니다.</string>
+    <string name="info_add_place_complete">장소 추가 완료</string>
+    <string name="info_data_is_empty">데이터를 가져오는데 실패하였습니다.\n다시 시도해주세요.</string>
+    <string name="info_widget_data_load_error">데이터가 없습니다.</string>
 
     <string name="symbol_colon">:</string>
     <string name="symbol_slash">/</string>
@@ -54,12 +59,6 @@
 
     <string name="text_on_time_rain_gauge">시간당 강수량</string>
     <string name="text_agree_my_location">내위치 날씨 보기 사용</string>
-
-    <string name="info_add_place_maximum">즐겨 찾는 장소는 최대 5개까지 등록이 가능합니다.</string>
-    <string name="info_add_place_already">해당 장소는 이미 추가되어 있습니다.</string>
-    <string name="info_add_place_complete">장소 추가 완료</string>
-
-    <string name="info_data_is_empty">데이터를 가져오는데 실패하였습니다.\n다시 시도해주세요.</string>
 
     <string name="guide_on_time_tpr">현재 기온</string>
     <string name="guide_on_time_humidity">현재 습도</string>
