--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="title_dialog_delete">즐겨찾는 장소 삭제</string>
     <string name="title_add_place_maximum">즐겨찾는 장소 개수 초과</string>
     <string name="title_dialog_location_permission">위치 권한이 필요함</string>
+    <string name="title_notify_network_timeout">네트워크 연결 실패</string>
     <string name="title_default_setting">기본 설정</string>
 
     <string name="text_wind_chill">체감온도</string>
