--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="info_location_timeout">위치 정보를 가져오는데 실패했습니다.(시간초과) 잠시 후 다시 진행합니다.</string>
     <string name="info_network_timeout">네트워크 연결 시간초과</string>
     <string name="info_network_disabled">네트워크 연결이 정상적이지 않습니다.</string>
+    <string name="info_network_unknown">알 수 없는 에러입니다.</string>
+    <string name="info_network_success">정상 처리 되었습니다.</string>
     <string name="info_deny_permission">"일부 기능이 제한될 수 있습니다."</string>
     <string name="info_exit_message">\'뒤로\'버튼 한번 더 누르시면 종료됩니다.</string>
     <string name="info_delete_message">선택하신 장소가 삭제됩니다.</string>
