--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,7 @@
     <string name="mapping_sejong">세종</string>
 
     <string name="holder_level_value">%1$s (%2$d)</string>
-    <string name="holder_weather_notify">%1$s℃ (%3$s℃ / %4$s℃) 체감온도 : %2$s℃</string>
+    <string name="holder_weather_notify">현재온도 : %1$s℃, 체감온도 : %2$s℃</string>
     <string name="holder_special_value">%1$s 발효중</string>
     <string name="holder_update_time">업데이트 : %1$s</string>
     <string name="holder_sensory_tpr">(체감 : %1$s℃)</string>
