--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="title_on_time_temperature">현재 날씨</string>
     <string name="title_daily_temperature">일일 날씨</string>
     <string name="title_weekly_temperature">주간 날씨</string>
-    <string name="title_life_list">생활 지수</string>
+    <string name="title_life_list">생활·보건 지수</string>
     <string name="title_on_time_description">세부 정보</string>
     <string name="title_dialog_delete">즐겨찾는 장소 삭제</string>
     <string name="title_add_place_maximum">즐겨찾는 장소 개수 초과</string>
